force-app/main/default/objects/Timeseries__b/Timeseries__b.object-meta.xml
<CustomObject>
    <label>Timeseries</label>
    <pluralLabel>Timeseries</pluralLabel>
</CustomObject>