force-app/main/default/objects/Timeseries__b/fields/Close__c.field-meta.xml
<CustomField>
    <fullName>Close__c</fullName>
    <label>Close</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>