force-app/main/default/objects/Timeseries__b/fields/High__c.field-meta.xml
<CustomField>
    <fullName>High__c</fullName>
    <label>High</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>