force-app/main/default/objects/Timeseries__b/fields/Interval__c.field-meta.xml
<CustomField>
    <fullName>Interval__c</fullName>
    <label>Interval</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
</CustomField>