force-app/main/default/objects/Timeseries__b/fields/Low__c.field-meta.xml
<CustomField>
    <fullName>Low__c</fullName>
    <label>Low</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>