force-app/main/default/objects/Timeseries__b/fields/Moment__c.field-meta.xml
<CustomField>
    <fullName>Moment__c</fullName>
    <label>Moment</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>