force-app/main/default/objects/Timeseries__b/fields/Open__c.field-meta.xml
<CustomField>
    <fullName>Open__c</fullName>
    <label>Open</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>