force-app/main/default/objects/Timeseries__b/fields/Stock__c.field-meta.xml
<CustomField>
    <fullName>Stock__c</fullName>
    <label>Stock</label>
    <referenceTo>Stock__c</referenceTo>
    <relationshipLabel>Timeseries</relationshipLabel>
    <relationshipName>Timeseries</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>