force-app/main/default/objects/Timeseries__b/fields/Volume__c.field-meta.xml
<CustomField>
    <fullName>Volume__c</fullName>
    <label>Volume</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>